--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "recharts": "^3.6.0",
     "react": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
